# invoice-saas

./: .env.example  .gitignore  INVOICE_SAAS_PLANNING.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/api/: [...path].py
backend/app/: main.py
backend/app/billing/: routes.py  stripe_service.py  usage.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_initial.py
backend/app/extraction/: base.py  external_provider.py  mock_provider.py  pdf_text_provider.py
backend/app/invoices/: exports.py  normalization.py  organizations.py  routes.py  schemas.py  service.py  suppliers.py  validation.py
backend/app/tests/: test_billing.py  test_extraction.py  test_normalization.py  test_storage_and_validation.py  test_validation.py
backend/app/workers/: process_invoice.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx
frontend/app/app/exports/: page.tsx
frontend/app/app/invoices/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: invoice-preview.tsx  invoice-review-form.tsx  status-badge.tsx  upload-dropzone.tsx
frontend/lib/: api.ts  auth.ts  formatting.ts  org-context.tsx  org.ts
scripts/: deploy.py
supabase/: rls.sql  schema.sql  setup.sql  storage-policies.sql
(+3 files in other folders)
