[project]
name = "invoice-saas-backend"
version = "0.1.0"
description = "Invoice extraction SaaS backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "gunicorn>=21.2",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "PyJWT[crypto]>=2.8",
  "cryptography>=42.0",
  "redis>=5.0",
  "rq>=1.16",
  "supabase>=2.4",
  "boto3>=1.34",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "pillow>=10.0",
  "stripe>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "reportlab>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"